se corrigio css v1

--- a/src/components/Contact/styles.css
+++ b/src/components/Contact/styles.css
@@ -284,6 +284,7 @@
     display: grid;
     align-items: center;
     justify-content: center;
+    height: auto;
   }
 
   .contact-detail-wrapper {
